--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Basic tests for nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "mocha **/*.test.js"
+    "test": "mocha **/*.test.js",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,11 @@
   },
   "homepage": "https://github.com/jamesferry11/node-tests#readme",
   "devDependencies": {
-    "mocha": "^3.0.0"
+    "expect": "^1.20.2",
+    "mocha": "^3.0.0",
+    "supertest": "^2.0.0"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
